# pso

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: backend-tests.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  server.py
backend/pso/fitness/: __init__.py  convergence.py  functions.py
backend/pso/models/: __init__.py  pydantic_models.py
backend/pso/pipelines/: __init__.py  pipeline.py  runner.py
backend/pso/processors/: __init__.py  evaluation.py  export.py  position.py  processor.py  topology.py  velocity.py
backend/pso/swarm/: __init__.py  builder.py  particle.py  swarm.py
backend/pso/topology/: __init__.py  topology.py
backend/pso/utils/: animator.py  logger.py
backend/tests/: test_convergence.py  test_fitness.py  test_particles.py  test_processors.py  test_pso_runner.py  test_swarm.py  test_topology.py
frontend/: Dockerfile  Home.py  requirements.txt
frontend/pages/: 1_Playground.py  2_All_Runs.py
frontend/utils/: __init__.py  api_calls.py  logger.py
